# alpaca-backtrader-api

./: .gitignore  MIGRATION.md  README.md  example.py  pyproject.toml
.cursor/rules/: python.mdc  repo.mdc
.github/workflows/: build.yml  test.yml
alpaca_backtrader_api/: __init__.py  alpacabroker.py  alpacadata.py  alpacastore.py
sample/: strategy_multiple_datas.py  strategy_multiple_indicators.py  strategy_readme_sample.py  strategy_resampling_example.py  strategy_sample_code.py  strategy_sma_crossover.py
